- Fix navbar security - Align user mail style with other navbar elements

--- a/schedule-project/src/main/resources/static/css/common.css
+++ b/schedule-project/src/main/resources/static/css/common.css
@@ -28,3 +28,8 @@
 #add-entry-button {
     margin: 25px;
 }
+
+nav ul li span {
+    display: block;
+    padding: 0.5rem 1rem;
+}
